# crashc

./: .cproject  .gitignore  .project  CMakeLists.txt  CODESTYLE.md  CrashC Debug.launch  CrashC.doxyfile  LICENSE.md  LorenzoChangelog.txt  README.md  crashc Debug.launch  createCrashCProductionFiles.bash  doc.script.cmake.in  testEverything.bash
CUtils/: .cproject  .project  CMakeLists.txt  CUtils Debug.launch  CUtils.doxyfile
CUtils/src/main/c/: CMakeLists.txt  a_star.c  arg_parser.c  binaryTree.c  conversions.c  csvProducer.c  defaultFunctions.c  dynamic_array.c  dynamic_stack.c  edge.c  hash_set.c  hashtable.c  heap.c  list.c  log.c  man_producer.c  math_utils.c  node.c  online_statistics.c  online_statistics_pool.c  payload_functions.c  plot2DProducer.c  predsuccgraph.c  queue.c  random_utils.c  redBlackTree.c  regularExpression.c  scc.c  simple_loop_computer.c  space_measurement.c  stack.c  stringBuilder.c  timeMeasurement.c  topologicalOrder.c  tuple.c  utility.c
CUtils/src/main/include/: a_star.h  arg_parser.h  binaryTree.h  conversions.h  csvProducer.h  defaultFunctions.h  dynamic_array.h  dynamic_stack.h  edge.h  errors.h  hash_set.h  hashtable.h  heap.h  list.h  local_search.h  log.h  macros.h  man_producer.h  math_utils.h  node.h  online_statistics.h  online_statistics_pool.h  payload_functions.h  plot2DProducer.h  predsuccgraph.h  queue.h  random_utils.h  redBlackTree.h  regularExpression.h  scc.h  simple_loops_computer.h  space_measurement.h  stack.h  stringBuilder.h  timeMeasurement.h  topologicalOrder.h  tuple.h  typedefs.h  utility.h
CUtils/src/test/c/: AllTests.c  CMakeLists.txt  arg_parserTest.c  binarySearchTreeTest.c  csvTest.c  dynamic_arrayTest.c  dynamic_stackTest.c  graphTest.c  hashsetTest.c  heapTest.c  htTest.c  listTest.c  logTest.c  macrosTest.c  plotProducerTest.c  queueTest.c  redBlackTreetest.c  regexTest.c  sccTest.c  simple_loop_computerTest.c  spaceMeasurementTest.c  stackTest.c  stringBuilderTest.c  topologicalOrderTest.c
catchcpp-cutils-testing/: .cproject  .project  CMakeLists.txt
catchcpp-cutils-testing/src/test/cpp/: CMakeLists.txt  test.cpp
crashc/: .cproject  CMakeLists.txt  CODESTYLE.md  CrashC.doxyfile  createCrashCProductionFiles.bash  ct_stats  testEverything.bash
crashc-cutils-testing/: .cproject  .project  CMakeLists.txt
crashc-cutils-testing/src/test/c/: CMakeLists.txt  test.c  test_main.c
crashc-cutils-testing/src/test/include/: crashC.all.in.one.h
crashc/docResources/: hierarchy01.dot  mainPage.dox
crashc/docResources/dot/: accessWhen.dot
crashc/src/main/c/: command_line.c  crashc.c  hashtable.c  test_report.c  utils.c
crashc/src/main/include/: assertions.h  errors.h  list.h  report_producer.h  sig_handling.h  test_report.h  typedefs.h  utils.h
crashc/src/main/resources/: buildAllInOneInclude.bash
crashc/src/main/system_include/: setjmp.h  signal.h  stddef.h  stdint.h  string.h
crashc/src/test/c/: CMakeLists.txt  test_issue0002.c  test_issue0004.c  test_issue0028.c
crashc/src/test/resources/: testEverything.bash
crashc/wiki/: 01_Installation.md  05_TagsAndCLI.md
docResources/: exampleOfTestCase.dox  mainPage.dox  section_tree.dox  tags.dox  tags.doxy
docResources/dot/: exampleOfTestCase.dot  sectionTree.dot  signalDetectedTree.dot
src/main/c/: CMakeLists.txt  assertions.c  command_line.c  crashC.c  crashc.c  ct_assert.c  ct_utils.c  fatForwardList.c  forwardList.c  hashtable.c  list.c  main_model.c  model.c  oldcrashC.c  reportProducer.c  report_producer.c  section.c  sections.c  sigHandling.c  sig_handling.c  tag.c  testFragment.c  testReport.c  test_report.c  timeMeasurement.c  utils.c
src/main/include/: assertions.h  command_line.h  console_color.h  crashC.h  crashc.h  ct_assert.h  ct_utils.h  errors.h  fatForwardList.h  forwardList.h  hashtable.h  list.h  macros.h  main_model.h  model.h  oldcrashC.h  reportProducer.h  report_producer.h  section.h  sections.h  sigHandling.h  sig_handling.h  tag.h  testReport.h  test_report.h  timeMeasurement.h  typedefs.h  uthash.h  utils.h
src/main/resources/: buildAllInOneInclude.bash
src/main/system_include/: getopt.h  stdarg.h  stdlib.h  unistd.h
src/test/c/: CMakeLists.txt  bugcode.c  test.c  test1.c  test2.c  test_checker.c  test_issue0001.c  test_issue0001_b.c  test_issue0002.c  test_issue0004.c  test_issue0006.c  test_issue0014.c  test_issue0015.c  test_issue0028.c  test_issue0069.c  test_issue0071.c  test_issue14.c
src/test/c/test_files/: test  test.c  test2.c
src/test/include/: test_checker.h
src/test/resources/: testEverything.bash
wiki/: 01_Installation.md  02_QuickTour.md  03_MeetThePowerhouse.md  04_MultipleFiles.md  05_TagsAndCLI.md
